src/test/resources/validation/error/multisetReferenceConditionNotSupported/schema.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
  historicalAddresses: [Address!]! @reference(references: [{condition : {name: "TEST_CUSTOMER_ADDRESS", method: "customerAddress"}}])
}

type Address @table {
  id: ID!
  address: String
}
